--- a/views/partials/stylepayment.ejs
+++ b/views/partials/stylepayment.ejs
@@ -4,6 +4,16 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+input
+{
+  text-align: center !important;
+}
+input:read-only
+{
+
+  background-color: white !important;
+}
+
 .nepali-date-picker
 {
 width:250px !important;
