--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -28,3 +28,22 @@
  <link type="text/css" rel="stylesheet" href="../css/stylebilling.css" media="print" />
   
 
+<style type="text/css">
+.dropdown-submenu{
+    position: relative;
+}
+.dropdown-submenu a::after{
+    transform: rotate(-90deg);
+    position: absolute;
+    right: 3px;
+    top: 40%;
+}
+.dropdown-submenu:hover .dropdown-menu, .dropdown-submenu:focus .dropdown-menu{
+    display: flex;
+    flex-direction: column;
+    position: absolute !important;
+    margin-top: -30px;
+    left: 100%;
+}
+
+</style>
