--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,40 +1,44 @@
 <!-- views/partials/header.ejs -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+  <nav class="navbar navbar-expand text-black navbar-light bg-primary">
+
+  <a class="navbar-brand" href="#">Hotel Atlas</a>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav mr-auto text-white">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-       <li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="/reserve">Reserve</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/payment">Voucher</a>
+        <a class="nav-link" href="/voucher">Voucher</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Report
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+
+          <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">Daybook</a>
+            <ul class="dropdown-menu">
+              <a class="dropdown-item" href="#">View Daybook</a>
+              <a class="dropdown-item" href="#">Alter Daybook</a>
+            </ul>
+          </li>
+             <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">Ledger</a>
+            <ul class="dropdown-menu">
+              <a class="dropdown-item" href="#">View Ledger</a>
+              <a class="dropdown-item" href="#">Alter Ledger</a>
+            </ul>
+          </li>
+
+          <li><a class="dropdown-item" href="#">Trial Balance</a></li>
+          <li><a class="dropdown-item" href="#">Balance Sheet</a></li>
+
+         
+        </ul>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/billing">Billing</a>
-      </li>
-      
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
