--- a/views/partials/itemgroupcreate.ejs
+++ b/views/partials/itemgroupcreate.ejs
@@ -7,21 +7,15 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form class="itemgroupinformations" action="">
+            <form class="itemgroupinformations" method="post" action="" onkeypress="return event.keyCode != 13;" autocomplete="off" >
                 <div class="modal-body ">
                     <div class="row ">
                         <div class="col-md-10 itemgroupinformation">
-                            <label style="font-size: 12px;">Name</label><input type="text" name="itemname" id="accountname" tabindex="-1" class="ml-2  border-0 w-50 form-control d-inline" required autofocus><br></br>
-                            <label style="font-size: 12px;">Alias</label><input type="text" name="itemalias" id="itemalias" tabindex="-1" class="ml-2  border-0 w-50 form-control d-inline" required ><br></br>
-                            <label style="font-size: 12px;">Under</label>
-                            <select class="ml-2 w-50 form-control d-inline" style="font-size: 12px; height:30px;" name="accountgroup" onchange="javascript:changeaccounttype(event)" id="accountgroup" required>
-                                <option value="0">------------</option>
-                                <!--  <%results.forEach(function(result) { %>
-                                <option value='<%= result.groupid %>'>
-                                    <%= result.grouptitle %>
-                                </option>
-                                <% }); %> -->
-                            </select><br></br>
+                            <label style="font-size: 12px;">Name</label><input type="text" name="groupname" id="groupname" class="ml-2  border-0 w-50  d-inline" required autofocus><br></br>
+                            
+                            <label style="font-size: 12px;">Category</label>
+                            <input class="ml-2 w-50 d-inline" style="font-size: 12px; height:30px;" name="groupcategory" list="categorylist" id="itemcategorycreate"  required>
+                                
                         </div>
                     </div>
                 </div>
