--- a/views/partials/itemcategorycreate.ejs
+++ b/views/partials/itemcategorycreate.ejs
@@ -3,7 +3,7 @@
         <div class="modal-content" style="margin:auto;width: 400px;">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Stock Category Creation</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="closecategory close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
