--- a/views/partials/itemcreate.ejs
+++ b/views/partials/itemcreate.ejs
@@ -3,7 +3,7 @@
         <div class="modal-content" style="margin:auto; width:400px;">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Stock Item Creation</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="closeitem close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -13,11 +13,11 @@
                         <div class="col-md-10 iteminformation">
                             <h4 class="text-center error-msg">
                             </h4>
-                            <label style="font-size: 12px;">Itemname</label><input type="text" name="itemsname" id="itemsname" class="ml-2  border-0 w-75 form-control d-inline" autofocus required oninvalid="this.setCustomValidity('Set Itemname!!')"><br></br>
-                            <label style="font-size: 12px;">Alias</label><input type="text" name="itemalias" id="itemalias" required class="ml-2  border-0 w-75 form-control d-inline"><br></br>
-                            <label style="font-size: 12px;">Units</label><input name="units" id="units" type="text" required class=" ml-2 form-control border-0 d-inline w-75"><br></br>
+                            <label style="font-size: 12px;">Itemname</label><input type="text" name="itemsname" id="itemsnamemodal" class="ml-2 border border-1 w-75 form-control d-inline" autofocus required oninvalid="this.setCustomValidity('Set Itemname!!')"><br></br>
+                            <label style="font-size: 12px;">Alias</label><input type="text" name="itemalias" id="itemalias" required class="ml-2 border border-1 w-75 form-control d-inline"><br></br>
+                            <label style="font-size: 12px;">Units</label><input list="unitlist" name="units" id="units" type="text" required class=" ml-2 border form-control border-1 d-inline w-75"><br></br>
                             <label style="font-size: 12px;">Group</label>
-                            <input type="text"  required list="itemgrouplist" name="itemgroupcreate" id="itemgroupcreate" class="form-control border-0 d-inline w-75">
+                            <input type="text"  required list="itemgrouplist" name="itemgroupcreate" id="itemgroupcreate" class="form-control border border-1 d-inline w-75">
                         </div>
                     </div>
                 </div>
