--- a/views/partials/itemcreate.ejs
+++ b/views/partials/itemcreate.ejs
@@ -7,7 +7,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form class="iteminformations" method="post" onkeypress="return event.keyCode != 13;" autocomplete="off">
+            <form class="iteminformations" method="post" action="" onkeypress="return event.keyCode != 13;" autocomplete="off">
                 <div class="modal-body ">
                     <div class="row ">
                         <div class="col-md-10 iteminformation">
