--- a/views/pages/stock.ejs
+++ b/views/pages/stock.ejs
@@ -18,6 +18,8 @@
         <% include ../partials/itemcreate %>
         <% include ../partials/itemgroupcreate %>
         <% include ../partials/itemcategorycreate %>
+        <% include ../partials/unitModal %>
+
 
 
     </main>
@@ -25,6 +27,8 @@
     <script src="../js/itemcreate.js"></script>
     <script src="../js/itemgroupcreate.js"></script>
     <script src="../js/itemcategorycreate.js"></script>
+    <script src="../js/unitcreate.js"></script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://unpkg.com/nepali-date-picker@2.0.0/dist/jquery.nepaliDatePicker.min.js" integrity="sha384-bBN6UZ/L0DswJczUYcUXb9lwIfAnJSGWjU3S0W5+IlyrjK0geKO+7chJ7RlOtrrF" crossorigin="anonymous"></script>
     <script>
