--- a/views/partials/itemcreate.ejs
+++ b/views/partials/itemcreate.ejs
@@ -16,7 +16,8 @@
                           <!--   <label style="font-size: 12px;">Itemname</label><input type="text" name="itemsname" id="itemsnamemodal" class="ml-2 border border-1 w-75 form-control d-inline" autofocus required oninvalid="this.setCustomValidity('Set Itemname!!')"> -->
                             <label style="font-size: 12px;">Itemname</label><input type="text" name="itemsname" id="itemsnamemodal" class="ml-2 border border-1 w-75 form-control d-inline" autofocus required ><br></br>
                             <label style="font-size: 12px;">Alias</label><input type="text" name="itemalias" id="itemalias" required class="ml-2 border border-1 w-75 form-control d-inline"><br></br>
-                            <label style="font-size: 12px;">Units</label><input list="unitlist" name="units" id="units" type="text" required class=" ml-2 border form-control border-1 d-inline w-75"><br></br>
+                            <label style="font-size: 12px;">Units</label><input list="unitlist" name="units" 
+                            id="unitcreate" type="text" required class=" ml-2 border form-control border-1 d-inline w-75"><br></br>
                             <label style="font-size: 12px;">Group</label>
                             <input type="text"  required list="itemgrouplist" name="itemgroupcreate" id="itemgroupcreate" class="form-control border border-1 d-inline w-75">
                         </div>
