--- a/views/partials/payment.ejs
+++ b/views/partials/payment.ejs
@@ -61,6 +61,8 @@
         <% include ../partials/itemcreate %>
         <% include ../partials/itemgroupcreate %>
         <% include ../partials/itemcategorycreate %>
+        <% include ../partials/unitModal %>
+
 
 
 
