--- a/views/partials/stock.ejs
+++ b/views/partials/stock.ejs
@@ -8,10 +8,10 @@
   <li style="height:35px; !important"  class="list-group-item p-1"><a href="trialbalance">By Item</a></li>
 </ul> -->
   <a class="nav-link border border-bottom-3 border-left-1"  href="/modifystockitem">Modify Stock Item </a>
-  <a class="nav-link border border-left-1"  href="#">Add Item</a>
-  <a class="nav-link border border-left-1"  href="#">Add Group</a>  
-  <a class="nav-link border border-left-1"  href="#">Add Category</a>
-  <a class="nav-link border border-left-1"  href="#">Add Units</a>  
+  <a class="nav-link border border-left-1" data-toggle="modal" data-target="#itemModal"  href="#">Add Item</a>
+  <a class="nav-link border border-left-1" data-toggle="modal" data-target="#itemgroupModal"  href="#">Add Group</a>  
+  <a class="nav-link border border-left-1" data-toggle="modal" data-target="#itemcategoryModal" href="#">Add Category</a>
+  <a class="nav-link border border-left-1" data-toggle="modal" data-target="#unitModal"  href="#">Add Units</a>  
 </nav>
     </div>
     <div style="margin-left:130px;" class="col-md-8 mt-4 ">
