--- a/views/pages/billing.ejs
+++ b/views/pages/billing.ejs
@@ -76,6 +76,12 @@ table,tr,th,td
 
 <main>
     <% include ../partials/billing %>
+    <% include ../partials/tableModal %>
+
+    <% include ../partials/roomModal %>
+
+    <% include ../partials/hallModal %>
+
 </main>
 <script src="../js/billing.js"></script>
 
