--- a/views/partials/stock.ejs
+++ b/views/partials/stock.ejs
@@ -7,7 +7,7 @@
   <li style="height:35px; !important"  class="list-group-item p-1"><a href="trialbalance">By Category</a></li>
   <li style="height:35px; !important"  class="list-group-item p-1"><a href="trialbalance">By Item</a></li>
 </ul> -->
-  <a class="nav-link border border-bottom-3 border-left-1"  href="/modifystockitem">Modify Stock Item </a>
+  <!-- <a class="nav-link border border-bottom-3 border-left-1"  href="/modifystockitem">Modify Stock Item </a> -->
   <a class="nav-link border border-left-1" data-toggle="modal" data-target="#itemModal"  href="#">Add Item</a>
   <a class="nav-link border border-left-1" data-toggle="modal" data-target="#itemgroupModal"  href="#">Add Group</a>  
   <a class="nav-link border border-left-1" data-toggle="modal" data-target="#itemcategoryModal" href="#">Add Category</a>
