--- a/views/partials/stylebilling.ejs
+++ b/views/partials/stylebilling.ejs
@@ -8,7 +8,7 @@ input[type=number]::-webkit-outer-spin-button {
 {
 background-color:grey;
 }
-table,tr,th,td
+/*table,tr,th,td
 {
   border:1px solid #EEE;
 }
@@ -28,7 +28,7 @@ border-radius: 0px !important;
 width:160px !important; 
 height:32px !important; 
 font-size: 12px !important;
-}
+}*/
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
