--- a/views/partials/nheader.ejs
+++ b/views/partials/nheader.ejs
@@ -117,7 +117,7 @@ nav.mainheader{
 </style>
   <nav class="navbar mb-4 mainheader navbar-expand text-black navbar-light ">
 <a class="navbar-brand ml-5" href="http://www.animatedimages.org/cat-nepal-flag-839.htm"><img src="http://www.animatedimages.org/data/media/839/animated-nepal-flag-image-0007.gif" style="width:50px; height:30px;" border="0" alt="animated-nepal-flag-image-0007" /></a>
-  <a class="navbar-brand mt-2" href="http://www.hotelatlas.com.np"><img style="width:100px; height:30px;" src="./js/jaclogo.png" /></a>
+  <a class="navbar-brand mt-2" href="http://www.jacnepal.com"><img style="width:100px; height:30px;" src="./js/jaclogo.png" /></a>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav mr-auto text-white">
       <li class="nav-item active ml-5">
@@ -131,9 +131,6 @@ nav.mainheader{
       </li>
       <li class="nav-item active ml-5">
         <a class="nav-link" href="/stock">Stock</a>
-      </li>
-       <li class="nav-item active ml-5">
-        <a class="nav-link" href="/billing">Billing</a>
       </li>
       <li style="z-index:999 !important;" class="nav-item active dropdown ml-5">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
