--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -162,7 +162,7 @@ $('form.userregistrationform').on('submit',function(e)
                 Cookies.set('username',username);
                 Cookies.set('password',password);
             }
-        window.location.replace("http://localhost:3000/voucher");
+        window.location.replace("http://account.hotelatlas.com.np/voucher");
          $('button#reset').click();
         },
         error:function(data)
