--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -142,7 +142,7 @@ $('button.logout').on('click',function(e)
 {
   Cookies.set('username','');
   Cookies.set('password','');
-  window.location.replace("http://localhost:3000/login");
+  window.location.replace("http://account.hotelatlas.com.np/login");
 
   
 })
