--- a/views/pages/billing.ejs
+++ b/views/pages/billing.ejs
@@ -3,6 +3,9 @@
 
 <html lang="en">
 
+<!-- Optional: include a polyfill for ES6 Promises for IE11 and Android browser -->
+<script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 <head>
   <style type="text/css" media="print">
     @page {
@@ -108,6 +111,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
   <script>
+
+
+  var itemlistresult='';
     $.ajax({
       url:'/getroom',
       type:'get',
@@ -197,7 +203,7 @@ function showmainbilling(e,type,rthname)
   $('div.billmainpart').append(`<div class="row">
   <div class="col-12 billdata">
   <h1 style="text-align:center;"> Hotel Atlas</h1>
-	<p style="text-align: center;">Sunual-12, Bhumahi</p>
+	<p style="text-align: center;">Sunwal-12, Bhumahi</p>
 	<label style="font-size:12px;"><b>Bill no:</b></label><input class="billno border border-0 disabled ml-1">
 	<label style="position:relative; left:100px; font-size:12px;">
 	<label class='dates d-inline'>Date:</label>
@@ -274,6 +280,7 @@ function showmainbilling(e,type,rthname)
 	</div><br></br>
 	<div class="text-center mt-4">
 	<button type="submit"  id="submit" class="btn btn-primary text-center" role="button">Submit</button>
+  
 	</div>
 	</div>
 
@@ -298,6 +305,7 @@ $.ajax({
   {
   results=data.results;
   console.log(results);
+  itemlistresult=results;
   $('table.billtable tr td').remove();
    /*  var totalamount=Number(data.iteminfo[0].price) * Number(quantity);  */
   for(i=0;i<results.length;i++)
@@ -336,7 +344,7 @@ $(document).on('click','a.additem',function(e)
   var salesdate= $('.salesdate').val();
   var billno = $('.billno').val();
   var rthtype= $('#rthtype').val();
-  alert(billno);
+
   $('table.billtable tr td').remove();
 $.ajax({
   url:'/searchitem',
@@ -348,6 +356,7 @@ $.ajax({
   results=data.results;
   console.log(results);
   var totalamount=0;
+  itemlistresult=results;
    /*  var totalamount=Number(data.iteminfo[0].price) * Number(quantity);  */
    for(i=0;i<results.length;i++)
    {
@@ -421,7 +430,89 @@ $(document).on('input','#paymentreceived',function(e)
   $('#balancedue').val(Number(paymentreceived)-Number(totalamount));
 })
 
+function printbill()
+{
+  var printbilldata='';
 
+  printbilldata+=`<div class="ml-2 mt-2" style="width:235px !important; font-weight:bold; font-size:15px !important;"><h5 class="text-center">Hotel Atlas</h5><h6 class="text-center">Sunwal-10,Bhumahi</h6> </div>`;
+  
+  var customername=$('#customername').val();
+  if(!customername)
+  {
+    customername='-------------------------';
+  }
+ 
+  var address=$('#address').val();
+    if(!address)
+  {
+    address='-----------------------';
+  }
+
+var billno=$('.billno').val();
+var salesdate=$('.salesdate').val();
+var panno=$('.panno').text();
+
+var totalamount=Number($('#totalamount').val());
+var discountamount=$('#discountamount').val();
+var discountpercent=$('#discountpercent').val();
+var servicecharge=$('#servicechargeamount').val();
+var grandtotalamount=$('#grandtotalamount').val();
+var paymentreceived= $('#paymentreceived').val();
+var balancedue=$('#balancedue').val();
+var pandata=`<div class="ml-2" style="width:230px !important;  font-weight:bold; font-size:12px !important;"> <label >Date:${salesdate}</label><label class="ml-4">PAN No.:${panno}</label></div>`
+  var billdate=`<div class="ml-2" style="width:230px !important; font-weight:bold; font-size:12px !important;"> <label>Invoice no:${billno}</label></div>`;
+  var customerdetails=`<div class="ml-2" style="width:230px !important; font-weight:bold; font-size:12px !important;"> <label>Name:${customername}</label></br><label >Address:${address}</label></div>`;
+  var itemlisttable=`<table cellpadding="5" style="width:245px !important; font-size:15px !important;color:black; " class="ml-3
+  " ><tr><th>Itemname</th><th>Qty.</th><th>Rate</th><th>Amt.</th></tr>`;
+
+console.log(itemlistresult);
+  for(i=0;i<itemlistresult.length;i++)
+   {
+    
+   itemlisttable+=`<tr style="margin-top:5px;"
+    class="text-center ">
+			<td>${itemlistresult[i].itemname}</td>
+			<td>${itemlistresult[i].quantity}</td>
+			<td>${itemlistresult[i].price}</td>
+			<td>${itemlistresult[i].amount}</td>
+		</tr>`;	
+    
+   }
+  itemlisttable+=`</table>`;
+
+var finallist=`<div class="mt-1"  style="width:250px !important; font-size:15px !important; text-align:right;"><label>Subtotal:Rs.${totalamount}</label></br><label>Service Charge:Rs.${servicecharge}</label></br><label>Discount amount:Rs.${discountamount}</label></br><label>Invoice total:Rs.${grandtotalamount}</label></br><label>Payment Received:Rs.${paymentreceived}</label></br><label>Balance due:Rs.${balancedue}</label></div>`;
+    popupWin = window.open("");
+        popupWin.document.open();
+        popupWin.document.write(`
+          <html>
+            <head>
+            <meta charset='utf-8'>
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+            </head>
+           <style>
+
+    body {
+  
+        font-family:Arial, Helvetica, sans-serif !important;
+        color:black !important;
+    }
+
+
+           </style>
+        <body >
+      ${printbilldata}${pandata}${billdate}${customerdetails}${itemlisttable}${finallist}
+        </body>
+
+          </html>`
+        );
+
+        setTimeout(function() {
+    popupWin.print();
+    popupWin.close();
+}, 100);
+    
+
+}
 $('.billtableform').on('submit',function(e)
 {
 
@@ -429,15 +520,21 @@ alert("Ehh");
 var sendvalue= [$('.billno').val(),$('#rthtype').val(),$('#rthname').val(),$('#customername').val(),$('#address').val(),$('#totalamount').val(),$('#servicechargeamount').val(),$('#discountamount').val(),$('#discountpercent').val(),$('#grandtotalamount').val(),$('#paymentreceived').val(),$('#balancedue').val(),$('.salesdate').val()];
 console.log(sendvalue);
 
-   
-
+var printbilldata='';
 $.ajax({
-  url:'addintobilldetails',
+  url:'/addintobilldetails',
   type:'post',
   data:{billingdetailsdata:sendvalue},
   success:function(data)
   {
     alert("Submitted Successfully");
+
+
+    new Promise((resolve,reject)=>
+    {
+      printbill()
+      resolve()
+    }).then(()=>location.reload())
   },
   error:function(data)
   {
