--- a/views/partials/loginregisterheader.ejs
+++ b/views/partials/loginregisterheader.ejs
@@ -39,7 +39,7 @@ nav.mainheader{
           
 </style>
   <nav class="navbar mb-4 mainheader navbar-expand text-white navbar-light ">
-<a class="navbar-brand ml-5" href="http://www.animatedimages.org/cat-nepal-flag-839.htm"><img src="http://www.animatedimages.org/data/media/839/animated-nepal-flag-image-0007.gif" style="width:50px; height:30px;" border="0" alt="animated-nepal-flag-image-0007" /></a>
+<% /*<a class="navbar-brand ml-5" href="http://www.animatedimages.org/cat-nepal-flag-839.htm"><img src="http://www.animatedimages.org/data/media/839/animated-nepal-flag-image-0007.gif" style="width:50px; height:30px;" border="0" alt="animated-nepal-flag-image-0007" /></a> */ %>
   <a class="navbar-brand mt-2" href="http://www.hotelatlas.com.np"><img style="width:100px; height:30px;" src="./js/hotelatlaslogo.png" /></a>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav float-right text-white">
