--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -84,7 +84,7 @@ nav.mainheader{
 }
 </style>
   <nav class="navbar mb-4 mainheader navbar-expand text-black navbar-light ">
-  <a class="navbar-brand mt-2" href="http://www.hotelatlas.com.np"><img style="width:100px; height:30px;" src="./js/hotelatlaslogo.png" /></a>
+  <a class="navbar-brand mt-2" href="http://www.hotelatlas.com.np"><img style="width:100px; height:auto;opacity:1;" src="./js/hotelatlaslogo.png" /></a>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav mr-auto text-white">
       <li class="nav-item active ml-5">
