--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -97,7 +97,7 @@ nav.mainheader{
         <a class="nav-link" href="/voucher">Voucher</a>
       </li>
       <li class="nav-item active ml-5">
-        <a class="nav-link" href="/stock">Stock</a>
+        <a class="nav-link" href="/sellingitem">Stock</a>
       </li>
        <li class="nav-item active ml-5">
         <a class="nav-link" href="/billing">Billing</a>
